--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
-CTV.url=https://www.saucedemo.com/
-CTV.user=standard_user
-CTV.password=secret_sauce
+CTV.url=Введите url
+CTV.user=Введите user
+CTV.password=Введите password
