--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.22.1</aspectj.version>
         <testng.version>7.4.0</testng.version>
+        <selenium-java.version>4.27.0</selenium-java.version>
+        <allure-testng.version>2.29.1</allure-testng.version>
+        <allure-maven.version>2.10.0</allure-maven.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.27.0</version>
+            <version>${selenium-java.version}</version>
         </dependency>
 
         <dependency>
@@ -33,7 +36,7 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.29.1</version>
+            <version>${allure-testng.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -45,7 +48,6 @@
         </dependency>
 
     </dependencies>
-
 
     <build>
         <plugins>
@@ -62,7 +64,7 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.10.0</version>
+                <version>${allure-maven.version}</version>
             </plugin>
 
         </plugins>
